syntax = "proto3";
package ace.ace.v1beta1;

option go_package = "github.com/wangfeiping/ace/x/ace/types";

import "gogoproto/gogo.proto";

message MsgSeed {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string secret = 3; 
}

